src/components/iconbar.module.scss
 @-webkit-keyframes fade-in-fwd {
    0% {
      -webkit-transform: translateZ(-80px);
              transform: translateZ(-80px);
      opacity: 0;
    }
    100% {
      -webkit-transform: translateZ(0);
              transform: translateZ(0);
      opacity: 1;
    }
  }
  @keyframes fade-in-fwd {
    0% {
      -webkit-transform: translateZ(-80px);
              transform: translateZ(-80px);
      opacity: 0;
    }
    100% {
      -webkit-transform: translateZ(0);
              transform: translateZ(0);
      opacity: 1;
    }
  }
  

@mixin responsive-font($size, $min: $size, $max: $size) {
  $clamp-size: #{'min(max(#{$size}, #{$min}), #{$max})'};
  font-size: $clamp-size;
}
  
.icon-bar-animation {
  display: flex;
  flex-direction: row;

  margin-top: 3rem;
  margin-left: 0;
  list-style: none;
  gap: 3rem;

  a {
      color: #999999;
      text-decoration: none;
      transition: 0.3s;
  }

  -webkit-animation: fade-in-fwd 0.6s cubic-bezier(0.860, 0.000, 0.070, 1.000) 5.5s backwards;
  animation: fade-in-fwd 0.6s cubic-bezier(0.860, 0.000, 0.070, 1.000) 5.5s backwards;
}

.icon-bar {
  display: flex;
  flex-direction: row;

  margin-top: 3rem;
  margin-left: 0;
  list-style: none;
  gap: 3rem;

  a {
      color: #999999;
      text-decoration: none;
      transition: 0.3s;
  }
}

@media (max-width: 800px) {
  .icon-bar {
    text-align: center;
    place-content: center;
    gap: 8vw;
    margin-top: 2rem;
    @include responsive-font(3vw, 18px, 20px)
  }

  .icon-bar-animation {
    text-align: center;
    place-content: center;
    gap: 8vw;
    margin-top: 2rem;
    @include responsive-font(3vw, 18px, 20px)
  }
}

@media (max-width: 500px) {
  .icon-bar {
    @include responsive-font(4.5vw, 14px, 20px)
  }

  .icon-bar-animation {
    @include responsive-font(4.5vw, 14px, 20px)
  }
}

.resume-icon:hover{
    color: #6DB1D8;
}

.email-icon:hover{
    color: #E94234;
}

.linkedin-icon:hover{
    color: #0076B4; 
}

.github-icon:hover{
    color: black; 
}

.soundcloud-icon:hover{
    color: #FC6800; 
}

